# tangle

./: .gitignore  .pre-commit-config.yaml  .python-version  AUTHORS.md  Cargo.toml  DockerfileTangle  DockerfileTester  README.md  pyproject.toml  setup.cfg
src/: client.rs  lib.rs  message.rs  protocol.rs  server.rs  settings.rs
src/components/: client.rs  mod.rs  pq.rs  server.rs  topic.rs
src/protocol/: constants.rs  handler.rs  mod.rs  nsq_v2.rs  writer.rs
tests/: docker-compose.yml  runtests.sh
tests/integration/: test_basic_io.py  test_simple.py
