[package]
authors = ["Aleksandr Koshkin"]
edition = "2021"
name = "tangle"
version = "0.1.0"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.61"
bytes = "1.3.0"
clap = {version = "4.0.32", features = ["derive", "env"]}
futures = "0.3.25"
log = "0.4.17"
rand = "0.8.5"
serde = {version = "1.0.152", features = ["serde_derive"]}
serde_json = "1.0.91"
simplelog = "0.12.0"
tokio = {version = "1.23.0", features = ["full"]}
uuid = {version = "1.2.2", features = ["v4"]}

[dev-dependencies]
rstest = "0.16.0"
tokio-test = "0.4.2"

[[bin]]
name = "tangled"
path = "src/bin/tangled.rs"
