[tool.poetry]
name = "tangle"
version = "0.1.0"
description = "Test suite for the tangle project"
authors = ["magniff <tinysnippets@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
ansq = "^0.1.0"
pytest-asyncio = "^0.20.3"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
