[tool.poetry]
authors = ["magniff <tinysnippets@gmail.com>"]
description = "Test suite for the tangle project"
license = "MIT"
name = "tangle"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
ansq = "^0.1.0"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
python = "~3.10"
Faker = "^17.0.0"
async-timeout = "^4.0.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
